# SUBSTitute

./: App.xaml  CMakeLists.txt  README.md  SUBSTitute.csproj
.github/workflows/: dotnet-desktop.yml  main.yml  msi.yml  package.yml
Commands/: MapDriveCommand.cs
ViewModels/: MainWindowViewModel.cs  MappingViewModel.cs
Views/: MainWindow.xaml  MainWindow.xaml.cs
Win32/: DosDevice.cs
